# kazandb

./: LICENSE  README.md  pyproject.toml
kazandb/: main.py  resp2.py  server.py
kazandb/parser/: parser.py  resp2.py
tests/: test_resp2.py
