[tool.poetry]
name = "kazandb"
version = "0.1.0"
description = ""
authors = ["enev13 <enev@engineer.bg>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.2"
pytest-cov = "^4.1.0"
redis = {extras = ["hiredis"], version = "^5.0.1"}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
